# projetCuda4

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  challenge.md
data/ship/: cameras.json  cameras_1.json  cameras_10.json
dependencies/argparse/: argparse.hpp
include/: 3dgs_common.h  dataset.h  image_buffer.h  renderer.h  renderer_base.h  renderer_common.h  renderer_reference.h
include/helper/: CPUTimer.h  GPUTimer.cuh  Utility.cuh  cuda_helper_host.h
src/: dataset.cpp  main.cpp  renderer.cu  renderer_reference.cu
